<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/pvRecipeStep"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="@dimen/standardMargin"
        app:fastforward_increment="1000"
        app:rewind_increment="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:resize_mode="fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.exoplayer2.ui.PlayerView>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardMargin"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pvRecipeStep" />

</android.support.constraint.ConstraintLayout>